# queues-fork-join

./: .gitignore  README.md  main.py  props_1.json  props_1_data.json  props_1_data_1.json  props_1_data_2.json  props_1_data_single.json  requirements.txt
analytics/: analytics_test.ipynb  matrix_helper.py  q_matrix_calculation.py  setup.py
analytics/analytics/: fork-join-model.py  fork_join_model.py  math_helper.py  matrix_helper.py  q_matrix_calculation.py  test_suit.py
analytics/analytics/ergodicity/: ergodicity.py
analytics/analytics/solution/: distribution-model.py  distribution.py  distribution_model.py  loss_probability.py
analytics/test/: p_0_p_1_solution_test.py  p_vectors_test.py  q_0_0_matrix_calculation_test.py  q_0_1_matrix_calculation_test.py  q_0_matrix_calculation_test.py  q_1_0_matrix_calculation_test.py  q_1_matrix_calculation_test.py  q_2_matrix_calculation_test.py  q_matrix_test.py  s_0_matrix_calculation_test.py  square_matrix_equation-resolution_test.py
fjqsim/: .gitignore  CMakeLists.txt  main.cpp
fjqsim/fjqsim/: CMakeLists.txt  statistics.cpp  statistics.h
fjqsim/tests/: CMakeLists.txt  test_statistics.cpp
ml/: loss_prob_ml.ipynb  ml.ipynb
ml/datasets/: data_1000.json
ml/datasets/fraction/validation/: by_arrival.json  by_arrival_res.json  by_slow_server_intencity_res.json  by_slow_servers.json  by_slow_servers_intencity.json  by_slow_servers_res.json
ml/datasets/linear/validation/: arrival.json  arrival_res.json  capacity.json  servers.json  (+2 more)
sim/: setup.py
sim/sim/: inputs.py  main.py  schema.py
sim/tests/: test_schema.py
